components/argocd/ingress-argocd-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    higress.io/domain: "argocd.nhome.local,argocd.bestnathan.top"
spec:
  ingressClassName: higress
  rules:
  - host: argocd.nhome.local
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: argocd.bestnathan.top
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.nhome.local
    - argocd.bestnathan.top
    secretName: argocd-tls
